--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#collaboration">Collaboration</a></li>
                 </ul>
             </div>
         </nav>
@@ -134,11 +134,12 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- Collaboration-->
+            <section class="resume-section" id="collaboration">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being spent outdoors. As for my hobbies, I enjoy hiking, playing basketball, golf and guitar. </p>
+                    <h2 class="mb-5">Collaboration</h2>
+                    <p class="collab-text">Interested in creating an amazing app together? Let me know!</p>
+                    <a href="mailto:jtshepherd31@gmail.com" class="collab-email">jtshepherd31@gmail.com</a>
                 </div>
             </section>
             <hr class="m-0" />
