--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <div class="container-fluid p-0">
 
             <!-- Welcome -->
-            <section class="style fade-in" id="wrapper">
+            <!-- <section class="style fade-in" id="wrapper">
                 <div class="welcome-title">
                     <h2>Welcome</h2>
                 </div>
-            </section>
+            </section> -->
             <!-- End Welcome -->
             
             <!-- About-->
@@ -55,14 +55,6 @@
                         <a href="mailto:jtshepherd31@gmail.com">jtshepherd31@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a full-stack developer with an immersive knowledge in the languages listed. My extensive background in sales and marketing has helped me develop excellent leadership, collaboration, and multitasking talents. I am always eager to learn more and expand my skill-set as a developer.</p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/jtshepherd31/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/jtshepherd31"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" id="resume-button" href="assets/img/JT SHepherd (1).pdf" target="_blank">
-                            RESUME 
-                            <i class="fas fa-cloud-download-alt"></i>
-                        </a>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
@@ -204,7 +196,7 @@
                             <div class="flipper">
                                 <div class="front">
                                     <!-- front content -->
-                                    <img class="lang-icon" src="assets/img/express.png"/>
+                                    <img class="lang-icon" id="express" src="assets/img/express.png"/>
                                 </div>
                                 <div class="back">
                                     <!-- back content -->
@@ -291,8 +283,15 @@
             <section class="resume-section" id="contact-me">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact Me</h2>
-                    <p class="collab-text">Interested in creating an amazing app together? Let me know!</p>
-                    <a href="mailto:jtshepherd31@gmail.com" class="collab-email">jtshepherd31@gmail.com</a>
+                </div>
+                <div class="social-icons">
+                    <a class="social-icon" href="https://www.linkedin.com/in/jtshepherd31/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://github.com/jtshepherd31"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="mailto:jtshepherd31@gmail.com"><i class="far fa-envelope"></i></a>
+                    <a class="social-icon" id="resume-button" href="assets/img/JT Shepherd Resume .pdf" target="_blank">
+                        RESUME 
+                        <i class="far fa-file"></i>
+                    </a>
                 </div>
             </section>
             <hr class="m-0" />
