Styling bugs fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Denver, CO ·
                         <a href="mailto:jtshepherd31@gmail.com">jtshepherd31@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a full-stack developer with an immersive knowledge in the languages listed. My extensive background in sales and marketing has helped me develop excellent leadership, collaboration, and multitasking talents. I am always eager to learn more and expand my skill-set as a developer.</p>
+                    <p class="lead mb-5">I am a full-stack developer with an immersive knowledge in front-end and back-end languages. My extensive background in sales and marketing has helped me develop excellent leadership, collaboration, and multitasking talents. I am always eager to learn more and expand my skill-set as a developer. </p>
                 </div>
             </section>
             <hr class="m-0" />
