--- a/index.html
+++ b/index.html
@@ -243,37 +243,41 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <div class="card-section">
-                        <div id="tic-tac-img" class="card">
-                            <h1 class="tic-title card-title">Tic Tac Toe</h1>
-                            <div class="card-content">
-                                <p>Traditional Tic-Tac-Toe</p>
-                                <a href="https://jtshepherd31.github.io/tic-tac-toe-client/">Visit Site</a>
+                        <div>
+                            <div id="tic-tac-img" class="card">
+                                <h1 class="tic-title card-title">Tic Tac Toe</h1>
+                                <div class="card-content">
+                                    <p>Traditional Tic-Tac-Toe</p>
+                                    <a href="https://jtshepherd31.github.io/tic-tac-toe-client/">Visit Site</a>
+                                </div>
+                                <div class="tic-screen card-screen"></div>
                             </div>
-                            <div class="tic-screen card-screen"></div>
+                            <div id="snake-img" class="card">
+                                <h1 class="snake-title card-title">Snake 2.0</h1>
+                                <div class="card-content">
+                                    <p>Snake 2.0 is a game of the original "Snake" with variations coming in future versions</p>
+                                    <a href="https://jtshepherd31.github.io/Snake-2-Client/">Visit Site</a>
+                                </div>
+                                <div class="snake-screen card-screen"></div>
+                            </div>
                         </div>
-                        <div id="snake-img" class="card">
-                            <h1 class="snake-title card-title">Snake 2.0</h1>
-                            <div class="card-content">
-                                <p>Snake 2.0 is a game of the original "Snake" with variations coming in future versions</p>
-                                <a href="https://jtshepherd31.github.io/Snake-2-Client/">Visit Site</a>
+                        <div>
+                            <div id="recipe-img" class="card">
+                                <h1 class="recipe-title card-title">RecipeDB</h1>
+                                <div class="card-content">
+                                    <p>A Recipe Database to be used much like a recipe book</p>
+                                    <a href="https://jtshepherd31.github.io/recipe-tracker-client/">Visit Site</a>
+                                </div>
+                                <div class="recipe-screen card-screen"></div>
                             </div>
-                            <div class="snake-screen card-screen"></div>
-                        </div>
-                        <div id="recipe-img" class="card">
-                            <h1 class="recipe-title card-title">RecipeDB</h1>
-                            <div class="card-content">
-                                <p>A Recipe Database to be used much like a recipe book</p>
-                                <a href="https://jtshepherd31.github.io/recipe-tracker-client/">Visit Site</a>
+                            <div id="blog-img" class="card">
+                                <h1 class="fumblr-title card-title">Fumblr</h1>
+                                <div class="card-content">
+                                    <p>A website to post blog entries and comment on other users entries</p>
+                                    <a href="https://blobject-oriented-progammers.github.io/blob-squad-client/">Visit Site</a>
+                                </div>
+                                <div class="blog-screen card-screen"></div>
                             </div>
-                            <div class="recipe-screen card-screen"></div>
-                        </div>
-                        <div id="blog-img" class="card">
-                            <h1 class="fumblr-title card-title">Fumblr</h1>
-                            <div class="card-content">
-                                <p>A website to post blog entries and comment on other users entries</p>
-                                <a href="https://blobject-oriented-progammers.github.io/blob-squad-client/">Visit Site</a>
-                            </div>
-                            <div class="blog-screen card-screen"></div>
                         </div>
                     </div>
                 </div>
