--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="subheading mb-3">Programming Languages & Tools
                     </div>
                     <div class="row lang-icons">
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -93,7 +93,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -163,7 +163,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
@@ -191,12 +191,12 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
                                     <!-- front content -->
-                                    <img class="lang-icon" id="express" src="assets/img/express.png"/>
+                                    <img class="lang-icon" src="assets/img/express.png"/>
                                 </div>
                                 <div class="back">
                                     <!-- back content -->
@@ -205,12 +205,12 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
                                     <!-- front content -->
-                                    <img class="lang-icon" src="assets/img/nodejs.png"/>
+                                    <img class="lang-icon" src="assets/img/Node.png"/>
                                 </div>
                                 <div class="back">
                                     <!-- back content -->
@@ -219,12 +219,12 @@
                             </div>
                         </div>
                       </div>
-                      <div class="col-sm-2">                        
+                      <div class="col-sm-4">                        
                         <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
                             <div class="flipper">
                                 <div class="front">
                                     <!-- front content -->
-                                    <img class="lang-icon" src="assets/img/jquery.png"/>
+                                    <img class="lang-icon" src="assets/img/JQuery.png"/>
                                 </div>
                                 <div class="back">
                                     <!-- back content -->
@@ -233,8 +233,50 @@
                             </div>
                         </div>
                       </div>
+                      <div class="col-sm-4">                        
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    <!-- front content -->
+                                    <img class="lang-icon" src="assets/img/ASPdotNET.png"/>
+                                </div>
+                                <div class="back">
+                                    <!-- back content -->
+                                    <h2 class="icon-card-subtitle mb-2 text-muted">ASP.NET</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">                        
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    <!-- front content -->
+                                    <img class="lang-icon" src="assets/img/SQLServer.png"/>
+                                </div>
+                                <div class="back">
+                                    <!-- back content -->
+                                    <h2 class="icon-card-subtitle mb-2 text-muted">SQL Server</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">                        
+                        <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                            <div class="flipper">
+                                <div class="front">
+                                    <!-- front content -->
+                                    <img class="lang-icon" src="assets/img/CSharp.png"/>
+                                </div>
+                                <div class="back">
+                                    <!-- back content -->
+                                    <h2 class="icon-card-subtitle mb-2 text-muted">C#</h2>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+            </div>
             </section>
             <hr class="m-0" />
 
